--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -48,6 +48,7 @@
             display: flex;
             justify-content: space-between;
             margin: 20px 0;
+            padding-left: 150px;
         }
 
         .form-container {
